--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,11 @@ h1, h2{
 }
 
 .lp{
-	background-color: rgb(204, 153, 255);
+	background-color: #CC99FF;
 }
 
 .green2{
-	background-color: rgb(255, 102, 26);
+	background-color: #FF661A;
 }
 
 .parent {
