made overflow visible

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ div, body, html{
 	margin: 0;
 	box-sizing: border-box;
 	text-align: center;
-	overflow: hidden;
+	overflow: visible;
 }
 
 h1, h2{
